--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
 <body>
     <h1>Welcome to My Repo practice</h1>
     <p>This is a sample HTML file.</p>
+
+
+
+ <footer> GINELLYS MEDINA 2025</footer>
 </body>
 </html> <!-- This is the end of the HTML document -->
